2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* service-info.c: (service_info_get_description): Translate
	the url descriptions too. Merged from head.

2003-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-type-info.c: (mime_type_get_pretty_name_for_server),
	(get_lang_list): Fix i18n problems. Patch from Mike Lei at Sun.
	Fixes bug #105700.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-type-info.c: (mime_category_info_get_full_name),
	(mime_category_info_get_full_description): Use g_string_new (NULL)
	instead of g_string_new (""). Reported to be more efficient.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-30  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=101128
	* mime-types-model.c (mime_types_model_iter_children) : apply patch
	  from padraig.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-12-09  Rajkumar Sivasamy <rajkumar.siva@wipro.com>

	* mime-edit-dialog.c: Display the list of applications installed 
	  in the system for a mime type rather than displaying all the 
	  applications associated to that mime type.
	  Fixes bug 94757

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=93279
	* file-types-properties.glade : missing & conflicting accerators.

	http://bugzilla.gnome.org/show_bug.cgi?id=93211
	* file-types-capplet.c (edit_count_cb) : delete.
	(selection_count_cb) : rename from remove_count_cb.