@@ -861,6 +861,13 @@ validate_data (MimeEditDialog *dialog)
 				GTK_BUTTONS_OK_CANCEL,
 				_("A MIME type with that name already exists, overwrite ?."));
 		}
+	} else {
+		err_dialog = gtk_message_dialog_new (
+			GTK_WINDOW (dialog->p->dialog_win),
+			GTK_DIALOG_DESTROY_WITH_PARENT, GTK_MESSAGE_ERROR,
+			GTK_BUTTONS_CANCEL,
+			_("Please enter a valid MIME type.  It should be of the form "
+			  "class/type and may not contain any spaces."));
 	}
 
 	if (err_dialog) {
