@@ -1,3 +1,9 @@
+2003-06-02  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>
+
+	* mime-edit-dialog.c: (validate_data): Give an error dialog if the 
+	users clicks on OK button when the MIME type is not entered
+	Fixes bug #113963
+
 2003-05-07  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.1
